--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button id="first" class="font-size">Click Me!</button>
-    <button id="second" class="font-size">No, Click Me!</button>
+    <button class="first">Click Me!</button>
+    <button class="second">No, Click Me!</button>
   </body>
 </html>
